--- a/covid-19-tracking/package.json
+++ b/covid-19-tracking/package.json
@@ -20,11 +20,12 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "readme.md": "^0.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
